# run-to-device

./: CMakeLists.txt  build.sh  index.html  pnpm-lock.yaml
.github/workflows/: main.yml
src/: main.cpp
src-tauri/: tauri.conf.json
